--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -14,7 +14,8 @@ jobs:
         env:
           GRAAL_VERSION: 20.0.0
           GRAAL_OS: windows-amd64
-        run: Invoke-WebRequest -Uri "https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-$GRAAL_VERSION/$GRAAL_FILENAME" -OutFile "$GRAAL_FILENAME"
+          GRAAL_DOWNLOAD: https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-${GRAAL_VERSION}/${GRAAL_FILENAME}
+        run: Invoke-WebRequest -Uri "$GRAAL_DOWNLOAD" -OutFile "$GRAAL_FILENAME"
       - name: Install GraalVM
         run: Expand-Archive -path "$GRAAL_FILENAME" -destinationpath '.\graalvm'
       - name: Install Native Image
