--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -12,13 +12,10 @@ jobs:
         uses: actions/checkout@v1
       - name: Download GraalVM
         env:
-          GRAAL_VERSION: 20.0.0
-          GRAAL_OS: windows-amd64
-          GRAAL_FILENAME: graalvm-ce-java8-${GRAAL_OS}-${GRAAL_VERSION}.zip
-          GRAAL_DOWNLOAD: https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-${GRAAL_VERSION}/${GRAAL_FILENAME}
-        run: Invoke-RestMethod -Uri "$env:GRAAL_DOWNLOAD" -OutFile "$env:GRAAL_FILENAME"
+          GRAAL_DOWNLOAD: https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java8-windows-amd64-20.0.0.zip
+        run: Invoke-RestMethod -Uri https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java8-windows-amd64-20.0.0.zip -OutFile 'graal.zip'
       - name: Install GraalVM
-        run: Expand-Archive -path "$env:GRAAL_FILENAME" -destinationpath '.\graalvm'
+        run: Expand-Archive -path 'graal.zip' -destinationpath '.\graalvm'
       - name: Install Native Image
         run: .\graalvm\bin\gu.cmd install native-image
       - name: Build the JAR
