--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -13,24 +13,24 @@ jobs:
       - name: Download GraalVM
         run: Invoke-RestMethod -Uri https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java8-windows-amd64-20.0.0.zip -OutFile 'graal.zip'
       - name: Install GraalVM
-        run: Expand-Archive -path 'graal.zip' -destinationpath '.\graalvm'
+        run: Expand-Archive -path 'graal.zip' -destinationpath '.'
       - name: Confirm Install
         run: Get-ChildItem -Path '.\graalvm'
       - name: Install Native Image
-        run: .\graalvm\bin\gu.cmd install native-image
+        run: graalvm-ce-java8-20.0.0\bin\gu.cmd install native-image
       - name: Build the JAR
         env:
-          JAVA_HOME: .\graalvm
-        run: .\gradlew.bat clean starter-cli:shadowJar --no-daemon
+          JAVA_HOME: .\graalvm-ce-java8-20.0.0
+        run: gradlew.bat clean starter-cli:shadowJar --no-daemon
       - name: Build Native Image
-        run: .\graalvm\bin\native-image --no-fallback --no-server -cp starter-cli/build/libs/starter-cli-*-all.jar
+        run: graalvm-ce-java8-20.0.0\bin\native-image --no-fallback --no-server -cp starter-cli/build/libs/starter-cli-*-all.jar
       - name: Verify Build
-        run: .\mn --version
+        run: mn.exe --version
       - name: Verify Create App
-        run: .\mn create-app test
+        run: mn.exe create-app test
       - name: Upload Snapshot
         uses: actions/upload-artifact@v1
         with:
           name: mn-windows-amd64-snapshot
-          path: mn
+          path: mn.exe
 
