--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -8,6 +8,8 @@ jobs:
     name: Builds Windows Native CLI
     runs-on: windows-latest
     steps:
+      - name: Enable Developer Command Prompt
+        uses: ilammy/msvc-dev-cmd@v1.1.0
       - name: Checkout the repository
         uses: actions/checkout@v1
       - name: Download GraalVM
