--- a/.github/workflows/mn-linux-snapshot.yml
+++ b/.github/workflows/mn-linux-snapshot.yml
@@ -22,6 +22,8 @@ jobs:
         run: ./graalvm/bin/native-image --no-fallback --no-server -cp starter-cli/build/libs/starter-cli-*-all.jar
       - name: Verify Build
         run: ./mn --version
+      - name: Verify Create App
+        run: ./mn create-app test
       - name: Upload Snapshot
         uses: actions/upload-artifact@v1
         with:
