--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -8,29 +8,12 @@ jobs:
     name: Builds Windows Native CLI
     runs-on: windows-latest
     steps:
-      - name: Install Choco
-        run: Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-      - name: Install Visual Studio 2017
-        run: choco install visualstudio2017-workload-vctools
-      - name: Setup Python 2.7
-        uses: actions/setup-python@v1
-        with:
-          python-version: '2.7.x'
-          architecture: 'x64'
-      - name: Checkout the repository
-        uses: actions/checkout@v1
-      - name: Download GraalVM
-        run: Invoke-RestMethod -Uri https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java11-windows-amd64-20.0.0.zip -OutFile 'graal.zip'
       - name: Install GraalVM
-        run: Expand-Archive -path 'graal.zip' -destinationpath '.'
-      - name: Install Native Image
-        run: graalvm-ce-java11-20.0.0\bin\gu.cmd install native-image
+        run: .\install-graal.cmd
       - name: Build the JAR
-        env:
-          JAVA_HOME: .\graalvm-ce-java11-20.0.0
         run: .\gradlew.bat clean starter-cli:shadowJar --no-daemon
       - name: Build Native Image
-        run: .\graalvm-ce-java11-20.0.0\bin\native-image --no-fallback --no-server -cp @(gci .\starter-cli\build\libs\starter-cli-*-all.jar)[0]
+        run: native-image --no-fallback --no-server -cp @(gci .\starter-cli\build\libs\starter-cli-*-all.jar)[0]
       - name: Verify Build
         run: .\mn.exe --version
       - name: Verify Create App
