--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -6,39 +6,29 @@ on:
 jobs:
   build:
     name: Builds Windows Native CLI
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-2016, windows-latest]
     steps:
-#      - name: Install Choco
-#        run: Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-      - name: Install Visual Studio 2017
-        run: choco install windows-sdk-7.1 kb2519277
-      - name: Activate Visual Studio 2017
-        run: C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd
-      - name: Install Visual Studio 2017 Build Tools
-        run: choco install visualstudio2017-workload-vctools
-      - name: Activate Build Tools
-        run: C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat
-      - name: Checkout the repository
-        uses: actions/checkout@v1
-      - name: Download GraalVM
-        run: Invoke-RestMethod -Uri https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.0.0/graalvm-ce-java11-windows-amd64-20.0.0.zip -OutFile 'graal.zip'
-      - name: Install GraalVM
-        run: Expand-Archive -path 'graal.zip' -destinationpath '.'
-      - name: Install Native Image
-        run: graalvm-ce-java11-20.0.0\bin\gu.cmd install native-image
-      - name: Build the JAR
-        env:
-          JAVA_HOME: .\graalvm-ce-java11-20.0.0
-        run: .\gradlew.bat clean starter-cli:shadowJar --no-daemon
-      - name: Build Native Image
-        run: .\graalvm-ce-java11-20.0.0\bin\native-image --no-fallback --no-server -cp @(gci .\starter-cli\build\libs\starter-cli-*-all.jar)[0]
-      - name: Verify Build
-        run: .\mn.exe --version
-      - name: Verify Create App
-        run: .\mn.exe create-app test
-      - name: Upload Snapshot
-        uses: actions/upload-artifact@v1
+      - uses: actions/checkout@v1
+      - uses: DeLaGuardo/setup-graalvm@2.0
         with:
-          name: mn-windows-amd64-snapshot
-          path: .\mn.exe
+          graalvm-version: '19.3.0.2.java11'
+      - run: java -version
+      - name: Set up Visual C Build Tools Workload for Visual Studio 2017 Build Tools
+        run: |
+          choco install visualstudio2017-workload-vctools
+      - name: set env variables and run the Gradle build
+        shell: cmd
+        run: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
+          ./gradlew starter-cli:shadowJar
+          native-image --no-fallback --no-server -cp @(gci .\starter-cli\build\libs\starter-cli-*-all.jar)[0]
+      - name: Publish artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: mn-${{ matrix.os }}-snapshot.exe
+          path: mn
 
