--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -20,15 +20,20 @@ jobs:
       - name: Set up Visual C Build Tools Workload for Visual Studio 2017 Build Tools
         run: |
           choco install visualstudio2017-workload-vctools
-      - name: set env variables and run the Gradle build
+      - name: Build JAR
         shell: cmd
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
           ./gradlew starter-cli:shadowJar
-          native-image --no-fallback --no-server -cp @(gci .\starter-cli\build\libs\starter-cli-*-all.jar)[0]
+      - name: Build Native Image
+        run: native-image --no-fallback --no-server -cp @(gci .\starter-cli\build\libs\starter-cli-*-all.jar)[0]
+      - name: Verify Build
+        run: mn --version
+      - name: Verify Create App
+        run: mn create-app test
       - name: Publish artifact
         uses: actions/upload-artifact@master
         with:
           name: mn-${{ matrix.os }}-snapshot.exe
-          path: mn
+          path: mn.exe
 
