--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -24,7 +24,7 @@ jobs:
         run: ./gradlew starter-cli:shadowJar
       - name: Build Native Image
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
+          cmd.exe /C "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
           native-image --no-fallback --no-server -cp @(gci .\starter-cli\build\libs\starter-cli-*-all.jar)[0]
       - name: Verify Build
         run: mn --version
