--- a/starter-cli/build.gradle
+++ b/starter-cli/build.gradle
@@ -1,6 +1,7 @@
 import io.micronaut.starter.cli.MicronautCreateStartScripts
 
 plugins {
+    id "org.mikeneck.graalvm-native-image" version "0.3.0"
     id "application"
     id "com.github.johnrengelman.shadow"
     id "io.micronaut.starter.rocker"
@@ -87,7 +88,7 @@ task buildCompletion(type: JavaExec) {
 
 task createStartScripts(type: MicronautCreateStartScripts) {
     description = "Creates OS specific scripts to run the Micronaut CLI."
-    mainClassName = 'io.micronaut.cli.MicronautCli'
+    mainClassName = 'io.micronaut.starter.cli.MicronautStarter'
     applicationName = 'mn'
     defaultJvmOpts = ["-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1", "-XX:CICompilerCount=3"]
     outputDir = outDir
@@ -135,4 +136,14 @@ sdkman {
     version = project.version
     url = "https://github.com/micronaut-projects/micronaut-starter/releases/download/v${project.version}/micronaut-cli-${project.version}.zip"
     hashtag = "#micronautfw"
+}
+
+nativeImage {
+    graalVmHome = System.getProperty('java.home')
+    mainClass = 'io.micronaut.starter.cli.MicronautStarter'
+    executableName = 'mn'
+    arguments(
+            '--no-fallback',
+            '--no-server'
+    )
 }
