Dont run linux/mac builds

--- a/.github/workflows/mn-macos-snapshot.yml
+++ b/.github/workflows/mn-macos-snapshot.yml
@@ -1,5 +1,8 @@
 name: Mac OS X Native CLI
-on: [push]
+on:
+  push:
+    branches:
+      - master
 jobs:
   build:
     name: Builds OS X Native CLI
