--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -33,7 +33,7 @@ jobs:
           JAVA_HOME: ./graalvm-ce-java11-20.0.0
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
-          native-image --no-server --no-fallback -cp build/libs/cli.jar
+          ./graalvm-ce-java11-20.0.0/bin/native-image --no-server --no-fallback -cp build/libs/cli.jar
       - name: Verify Build
         run: mn --version
       - name: Verify Create App
