--- a/starter-cli/build.gradle
+++ b/starter-cli/build.gradle
@@ -140,4 +140,5 @@ sdkman {
 task copyShadowJar(type: Copy) {
     from shadowJar.outputs
     into "${project.rootProject.buildDir}/libs"
+    rename { String fileName -> "cli.jar" }
 }
