--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -30,13 +30,15 @@ jobs:
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
           ./graalvm-ce-java11-20.0.0/bin/native-image --no-server --no-fallback -cp build/libs/cli.jar
+      - name: List Files
+        run: Get-ChildItem -Path "."
       - name: Verify Build
-        run: mn --version
+        run: ./mn.exe --version
       - name: Verify Create App
-        run: mn create-app test
+        run: ./mn.exe create-app test
       - name: Publish artifact
         uses: actions/upload-artifact@master
         with:
           name: mn-windows-amd64-snapshot.exe
-          path: mn
+          path: ./mn.exe
 
