Use unique app name

--- a/.github/workflows/mn-windows-snapshot.yml
+++ b/.github/workflows/mn-windows-snapshot.yml
@@ -39,7 +39,7 @@ jobs:
         run: mn --version
       - name: Verify Create App (CMD)
         shell: cmd
-        run: mn create-app test
+        run: mn create-app test2
       - name: Publish artifact
         uses: actions/upload-artifact@master
         with:
